# stratego

./: .gitignore  Board.cpp  Board.hpp  BombUnit.cpp  BombUnit.hpp  Button.cpp  Button.hpp  CMakeLists.txt  FlagUnit.hpp  GameView.cpp  GameView.hpp  MinerUnit.cpp  MinerUnit.hpp  Player.cpp  Player.hpp  README.md  RegularUnit.cpp  RegularUnit.hpp  ScoutUnit.hpp  SpyUnit.hpp  Unit.hpp  conanfile.py  main.cpp  requirements.txt
.github/profiles/: macos-15  ubuntu-24.04  windows-2022
.github/workflows/: ci.yml  ubuntu.yml
include/: Array2D.h  Attack.h  AttackInfoBox.hpp  BigButton.hpp  Board.hpp  BombUnit.hpp  Box.hpp  Button.hpp  ButtonInterface.hpp  CMakeLists.txt  FlagUnit.hpp  Game.hpp  GameController.hpp  GameView.hpp  MainMenu.hpp  MinerUnit.hpp  Movable.hpp  Player.hpp  RegularUnit.hpp  ScoutUnit.hpp  SpyUnit.hpp  TextController.hpp  Tile.hpp  Turn.hpp  Unit.hpp  cScreen.hpp
include/unit/: BombUnit.hpp  FlagUnit.hpp  MinerUnit.hpp  Movable.hpp  RegularUnit.hpp  ScoutUnit.hpp  SpyUnit.hpp  Unit.hpp  UnitConcepts.hpp  UnitCounter.hpp  UnitModel.hpp
include/unit/visit/: Attack.hpp  CanMove.hpp  GetOwner.hpp  GetTileInfo.hpp  GetUnitSpriteId.hpp
infra/hooks/: pre-commit
infra/scripts/: apply_formatting.sh  check_formatting.sh
src/: Attack.cpp  AttackInfoBox.cpp  BigButton.cpp  Board.cpp  Box.cpp  Button.cpp  ButtonInterface.cpp  CMakeLists.txt  Game.cpp  GameController.cpp  GameView.cpp  MainMenu.cpp  Movable.cpp  Player.cpp  main.cpp
src/unit/: BombUnit.cpp  FlagUnit.cpp  MinerUnit.cpp  RegularUnit.cpp  ScoutUnit.cpp  SpyUnit.cpp  Unit.cpp  UnitCounter.cpp  UnitModel.cpp
